# ez-err

./: Cargo.toml  LICENSE  README.md
src/: core.rs  lib.rs  prelude.rs  slice_ext.rs
