[package]
name = "ez-err"
version = "0.1.0"
edition = "2018"
rust-version = "1.31"
authors = ["Friedrich Schirmer <friedrichschirme@gmail.com>"]
description = "A simple error handling library with support for ergonomic and fast error handling."
documentation = "https://docs.rs/ez-err/latest/ez_err"
readme = "README.md"
repository = "https://github.com/Friedrich-S/ez-err"
license = "MIT"
keywords = ["error", "macro", "tracing"]
categories = ["rust-patterns"]

[dependencies]
log = { version = "0.4.17", optional = true }

[features]
default = []
log = ["dep:log"]
no_stacktrace = []